unpackaged/main/default/objects/Twenty_Groups__c/fields/Moderator_Search__c.field-meta.xml
<CustomField>
    <fullName>Moderator_Search__c</fullName>
    <description>Moderator search field for custom object.</description>
    <externalId>true</externalId>
    <label>Moderator Search</label>
    <length>50</length>
    <type>Text</type>
</CustomField>