unpackaged/main/default/objects/Twenty_Groups__c/fields/Moderator_SearchField__c.field-meta.xml
<CustomField>
    <fullName>Moderator_SearchField__c</fullName>
    <description>This translates the Moderator lookup field into TEXT for use in GLobal Searches - GLobal Search does NOT search lookup or formula  fields so this field is used instead.</description>
    <inlineHelpText>This translates the Moderator lookup field into TEXT for use in GLobal Searches - GLobal Search does NOT search lookup or formula  fields so this field is used instead.</inlineHelpText>
    <label>Moderator (SearchField)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>