unpackaged/main/default/objects/Twenty_Groups__c/fields/Moderator_Team_Manager__c.field-meta.xml
<CustomField>
    <fullName>Moderator_Team_Manager__c</fullName>
    <formula>NCM_Proprietor__r.Moderator_Team_Manager__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Moderator Team Manager</label>
    <type>Text</type>
</CustomField>