unpackaged/main/default/objects/Twenty_Groups__c/fields/Monthly_Group_Rate__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Group_Rate__c</fullName>
    <label>Monthly Group Rate</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>