unpackaged/main/default/objects/Twenty_Groups__c/fields/Monthly_Membership_Fee__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Membership_Fee__c</fullName>
    <label>Monthly Membership Fee</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>