unpackaged/main/default/objects/Twenty_Groups__c/fields/Moratorium_Notes__c.field-meta.xml
<CustomField>
    <fullName>Moratorium_Notes__c</fullName>
    <label>Moratorium Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>