unpackaged/main/default/objects/Twenty_Groups__c/fields/NCM_Proprietor__c.field-meta.xml
<CustomField>
    <fullName>NCM_Proprietor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>NCM Employee who will own this product or service with the client</description>
    <label>Group Owner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>NCM_Associates</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>20 Group</relationshipLabel>
    <relationshipName>X20_Group</relationshipName>
    <type>Lookup</type>
</CustomField>