unpackaged/main/default/objects/Twenty_Groups__c/fields/NCM_Support_Staff__c.field-meta.xml
<CustomField>
    <fullName>NCM_Support_Staff__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>NCM Employee who assists client and NCM Proprietor for this service or product</description>
    <label>Client Support Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>NCM_Associates</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>20 Group (Support Staff)</relationshipLabel>
    <relationshipName>X20_Group1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>