unpackaged/main/default/objects/Twenty_Groups__c/fields/New_Group__c.field-meta.xml
<CustomField>
    <fullName>New_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Group</label>
    <type>Checkbox</type>
</CustomField>