unpackaged/main/default/objects/Twenty_Groups__c/fields/New_Moderator__c.field-meta.xml
<CustomField>
    <fullName>New_Moderator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Moderator</label>
    <type>Checkbox</type>
</CustomField>