unpackaged/main/default/objects/Twenty_Groups__c/fields/New_WinM_Migration_Record__c.field-meta.xml
<CustomField>
    <fullName>New_WinM_Migration_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Record was added as part of WinMaster Data Migration Project</inlineHelpText>
    <label>New WinM Migration Record</label>
    <type>Checkbox</type>
</CustomField>