unpackaged/main/default/objects/Twenty_Groups__c/fields/OEM_Support_Notes__c.field-meta.xml
<CustomField>
    <fullName>OEM_Support_Notes__c</fullName>
    <label>OEM Support Notes</label>
    <type>TextArea</type>
</CustomField>