unpackaged/main/default/objects/Twenty_Groups__c/fields/OEM_Supported__c.field-meta.xml
<CustomField>
    <fullName>OEM_Supported__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OEM Supported</label>
    <type>Checkbox</type>
</CustomField>