unpackaged/main/default/objects/Twenty_Groups__c/fields/On_Hold_End_Date__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_End_Date__c</fullName>
    <description>End date for placing this group on hold.</description>
    <inlineHelpText>End date for placing this group on hold.</inlineHelpText>
    <label>On Hold End Date</label>
    <type>Date</type>
</CustomField>