unpackaged/main/default/objects/Twenty_Groups__c/fields/On_Hold_Last_FS_Date__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Last_FS_Date__c</fullName>
    <label>Last Composite Using Month/Year FS Data</label>
    <type>Date</type>
</CustomField>