unpackaged/main/default/objects/Twenty_Groups__c/fields/OnDemand__c.field-meta.xml
<CustomField>
    <fullName>OnDemand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OnDemand</label>
    <type>Checkbox</type>
</CustomField>