unpackaged/main/default/objects/Twenty_Groups__c/fields/OnDemand_Initiative_Launch_20_Group__c.field-meta.xml
<CustomField>
    <fullName>OnDemand_Initiative_Launch_20_Group__c</fullName>
    <label>OnDemand Initiative Launch</label>
    <type>Date</type>
</CustomField>