unpackaged/main/default/objects/Twenty_Groups__c/fields/Owner_Not_Mod_Code__c.field-meta.xml
<CustomField>
    <fullName>Owner_Not_Mod_Code__c</fullName>
    <formula>OwnerId &lt;&gt;  NCM_Proprietor__r.User_ID__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Not Mod (Code)</label>
    <type>Checkbox</type>
</CustomField>