unpackaged/main/default/objects/Twenty_Groups__c/fields/Print_Count__c.field-meta.xml
<CustomField>
    <fullName>Print_Count__c</fullName>
    <label>Print Count</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>