unpackaged/main/default/objects/Twenty_Groups__c/fields/Print_Count_Dealership_Form__c.field-meta.xml
<CustomField>
    <fullName>Print_Count_Dealership_Form__c</fullName>
    <label>Print Count - Dealership Form</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>