unpackaged/main/default/objects/Twenty_Groups__c/fields/Print_Ship_Total__c.field-meta.xml
<CustomField>
    <fullName>Print_Ship_Total__c</fullName>
    <label>Print / Ship Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>