unpackaged/main/default/objects/Twenty_Groups__c/fields/Quarterly_Extra_Mtg_Day_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Extra_Mtg_Day_Revenue__c</fullName>
    <label>Quarterly Extra Mtg. Day Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>