unpackaged/main/default/objects/Twenty_Groups__c/fields/Quarterly_Group_Extra_Product_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Group_Extra_Product_Revenue__c</fullName>
    <label>Quarterly Group Extra Product Revenue</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>