unpackaged/main/default/objects/Twenty_Groups__c/fields/Quarterly_Group_Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Group_Total_Revenue__c</fullName>
    <formula>Quarterly_Group_Fee_Revenue__c +  Quarterly_Group_Extra_Product_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarterly Group Total Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>