unpackaged/main/default/objects/Twenty_Groups__c/fields/Rejected_Candidates__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Candidates__c</fullName>
    <inlineHelpText>Total candidates rejected by group - all time</inlineHelpText>
    <label>Rejected Candidates</label>
    <summaryFilterItems>
        <field>X20_Groups_Member__c.Type__c</field>
        <operation>equals</operation>
        <value>Prospect</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>X20_Groups_Member__c.Status__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </summaryFilterItems>
    <summaryForeignKey>X20_Groups_Member__c.Group_ID__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>