unpackaged/main/default/objects/Twenty_Groups__c/fields/Shipping_Not_Required__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Not_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shipping Not Required</label>
    <type>Checkbox</type>
</CustomField>