unpackaged/main/default/objects/Twenty_Groups__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Group Start Date</description>
    <inlineHelpText>Group Start Date</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>