unpackaged/main/default/objects/Twenty_Groups__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
            <value>
                <fullName>New Group - Acquiring</fullName>
            </value>
            <value>
                <fullName>New Group - Didn&#39;t Start</fullName>
            </value>
            <value>
                <fullName>New Group - Prospecting</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>New Group - Overflow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>