unpackaged/main/default/objects/Twenty_Groups__c/fields/Status_Notes__c.field-meta.xml
<CustomField>
    <fullName>Status_Notes__c</fullName>
    <label>Status Notes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>