unpackaged/main/default/objects/Twenty_Groups__c/fields/SubType__c.field-meta.xml
<CustomField>
    <fullName>SubType__c</fullName>
    <label>SubType</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SuperType__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Dlr 20 - Acura</fullName>
            </value>
            <value>
                <fullName>Dlr 20 - All GM</fullName>
            </value>
            <value>
                <fullName>Dlr 20 - All GM - CANADA</fullName>
            </value>
            <value>
                <fullName>Dlr 20 - Any Franchise</fullName>
            </value>
            <value>
                <fullName>Dlr 20 - Audi</fullName>
            </value>
            <value>
                <fullName>Dlr 20 - Automotive Accessories</fullName>
            </value>
            <value>
                <fullName>Dlr 20 - BMW</fullName>
            </value>
            <value>
                <fullName>Dlr 20 - BMW Mini</fullName>
            </value>
            <value>
                <fullName>Dlr 20 - CH Chry Dodge Jeep</fullName>
            </value>
            <value>
                <fullName>Dlr 20 - CH Chry Dodge Jeep - CANADA</fullName>
            </value>
            <value>
                <fullName>Dlr 20 - Exotic</fullName>
            </value>
            <value>
                <fullName>Dlr 20 - Ford</fullName>
            </value>
            <value>
                <fullName>Dlr 20 - Ford Metro</fullName>
            </value>
            <value>
                <fullName>Dlr 20 - Ford Metro - CANADA</fullName>
            </value>
            <value>
                <fullName>Dlr 20 - Ford Regional</fullName>
            </value>
            <value>
                <fullName>Dlr 20 - Ford Regional - CANADA</fullName>
            </value>
            <value>
                <fullName>Dlr 20 - Ford Single City</fullName>
            </value>
            <value>
                <fullName>Dlr 20 - GM Cadillac</fullName>
            </value>
            <value>
                <fullName>Dlr 20 - GM Chev Metro</fullName>
            </value>
            <value>
                <fullName>Dlr 20 - GM Chev Single</fullName>
            </value>
            <value>
                <fullName>Dlr 20 - GM Pontiac</fullName>
            </value>
            <value>
                <fullName>Dlr 20 - Heavy Duty Trucks</fullName>
            </value>
            <value>
                <fullName>Dlr 20 - Honda</fullName>
            </value>
            <value>
                <fullName>Dlr 20 - Hyundai</fullName>
            </value>
            <value>
                <fullName>Dlr 20 - Hyundai - CANADA</fullName>
            </value>
            <value>
                <fullName>Dlr 20 - Infiniti</fullName>
            </value>
            <value>
                <fullName>Dlr 20 - Jaguar / Land Rover</fullName>
            </value>
            <value>
                <fullName>Dlr 20 - Kia</fullName>
            </value>
            <value>
                <fullName>Dlr 20: Kia - Canada</fullName>
                <label>Dlr 20 Kia - Canada</label>
            </value>
            <value>
                <fullName>Dlr 20 - Land Rover</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>