unpackaged/main/default/objects/Twenty_Groups__c/fields/SuperType__c.field-meta.xml
<CustomField>
    <fullName>SuperType__c</fullName>
    <inlineHelpText>This field should be synced with WinMaster.</inlineHelpText>
    <label>WinMaster Super Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dealer 20 Groups</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Industry 20 Groups</fullName>
            </value>
            <value>
                <fullName>Manager 20 Groups</fullName>
            </value>
            <value>
                <fullName>Manufacturers Groups</fullName>
            </value>
            <value>
                <fullName>NCMi</fullName>
            </value>
            <value>
                <fullName>PPP</fullName>
            </value>
            <value>
                <fullName>Proprietary Groups</fullName>
            </value>
            <value>
                <fullName>Public Groups</fullName>
            </value>
            <value>
                <fullName>Retail Ops</fullName>
            </value>
            <value>
                <fullName>Samples</fullName>
            </value>
            <value>
                <fullName>State Auto Associations</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>HealthCheck</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>