unpackaged/main/default/objects/Twenty_Groups__c/fields/Support_Staff_Manager__c.field-meta.xml
<CustomField>
    <fullName>Support_Staff_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Support Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>NCM Associates</value>
        </filterItems>
        <filterItems>
            <field>Contact.Employment_Status__c</field>
            <operation>equals</operation>
            <value>Employed</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>20 Groups (Support Staff Manager)</relationshipLabel>
    <relationshipName>X20_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>