unpackaged/main/default/objects/Twenty_Groups__c/fields/Survey_URL__c.field-meta.xml
<CustomField>
    <fullName>Survey_URL__c</fullName>
    <formula>HYPERLINK(&quot;https://www.getfeedback.com/r/1GiOKd03?Twenty_Groups__c ID=&quot; + Id , &quot;NCM 20 Group Survey&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey URL</label>
    <type>Text</type>
</CustomField>