unpackaged/main/default/objects/Twenty_Groups__c/fields/Test_Workflow_Dealership_Data__c.field-meta.xml
<CustomField>
    <fullName>Test_Workflow_Dealership_Data__c</fullName>
    <formula>HYPERLINK(&quot;https://workflow.appextremes.com/apps/Conga/PointMerge.aspx?SessionId=&quot; &amp; $Api.Session_ID &amp; &quot;&amp;ServerUrl=&quot; &amp; $Api.Partner_Server_URL_80 &amp; Conductor_URL_Dealership_Data_Form__c , &quot;Test Conga Workflow URL via UI&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Workflow Dealership Data</label>
    <type>Text</type>
</CustomField>