unpackaged/main/default/objects/Twenty_Groups__c/fields/UniqueGroupId__c.field-meta.xml
<CustomField>
    <fullName>UniqueGroupId__c</fullName>
    <description>The Unique Id for this Group in Master</description>
    <inlineHelpText>The Unique Id for this Group in Master</inlineHelpText>
    <label>UniqueGroupId</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>