unpackaged/main/default/objects/Twenty_Groups__c/fields/VIP_Members__c.field-meta.xml
<CustomField>
    <fullName>VIP_Members__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VIP Members</label>
    <type>Checkbox</type>
</CustomField>