unpackaged/main/default/objects/Twenty_Groups__c/fields/WinMaster_Group__c.field-meta.xml
<CustomField>
    <fullName>WinMaster_Group__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>WinMaster Group ID</description>
    <externalId>true</externalId>
    <label>WinMaster Group</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>