unpackaged/main/default/objects/Twenty_Groups__c/fields/WinMaster_Migration_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>WinMaster_Migration_Date_Stamp__c</fullName>
    <inlineHelpText>Date and Time Data was Added or Updated by WinMaster Migration Project</inlineHelpText>
    <label>WinMaster Migration Date Stamp</label>
    <type>DateTime</type>
</CustomField>