unpackaged/main/default/objects/Twenty_Groups__c/fields/X1_2_Members__c.field-meta.xml
<CustomField>
    <fullName>X1_2_Members__c</fullName>
    <description>(total number of 1/2 members with the status of active)</description>
    <label>1/2 Members</label>
    <summaryFilterItems>
        <field>X20_Groups_Member__c.Type__c</field>
        <operation>equals</operation>
        <value>1/2 Member</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>X20_Groups_Member__c.Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>X20_Groups_Member__c.Group_ID__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>