unpackaged/main/default/objects/Twenty_Groups__c/fields/x20GroupID_18__c.field-meta.xml
<CustomField>
    <fullName>x20GroupID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>20GroupID (18)</label>
    <type>Text</type>
</CustomField>