unpackaged/main/default/objects/Twenty_Groups__c/recordTypes/Consulting.recordType-meta.xml
<RecordType>
    <fullName>Consulting</fullName>
    <active>true</active>
    <description>Consulting Groups</description>
    <label>Consulting</label>
</RecordType>