unpackaged/main/default/objects/Twenty_Groups__c/recordTypes/NCM_Group.recordType-meta.xml
<RecordType>
    <fullName>NCM_Group</fullName>
    <active>true</active>
    <label>20 Group</label>
</RecordType>