unpackaged/main/default/objects/Twenty_Groups__c/recordTypes/Proprietary_Group.recordType-meta.xml
<RecordType>
    <fullName>Proprietary_Group</fullName>
    <active>true</active>
    <description>Proprietary Benchmark Products</description>
    <label>Proprietary Group</label>
</RecordType>