unpackaged/main/default/objects/Twenty_Groups__c/recordTypes/X20_Group_ConSept.recordType-meta.xml
<RecordType>
    <fullName>X20_Group_ConSept</fullName>
    <active>true</active>
    <description>Consept 20 Groups</description>
    <label>20 Group - ConSept</label>
</RecordType>