unpackaged/main/default/objects/Twenty_Groups__c/recordTypes/X20_Group_Sioux_Falls.recordType-meta.xml
<RecordType>
    <fullName>X20_Group_Sioux_Falls</fullName>
    <active>true</active>
    <description>Former Spader 20 Groups</description>
    <label>20 Group - Sioux Falls</label>
</RecordType>