unpackaged/main/default/objects/Twenty_Groups__c/recordTypes/X20_Mega_Group.recordType-meta.xml
<RecordType>
    <fullName>X20_Mega_Group</fullName>
    <active>true</active>
    <label>20 Mega Group</label>
</RecordType>