unpackaged/main/default/objects/Twenty_Groups__c/validationRules/Group_Owner_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Group_Owner_Required</fullName>
    <active>true</active>
    <description>The Group Owner can not be blank</description>
    <errorConditionFormula>ISBLANK( NCM_Proprietor__c )</errorConditionFormula>
    <errorDisplayField>Additional_Day_Notes__c</errorDisplayField>
    <errorMessage>There must be a Group Owner.</errorMessage>
</ValidationRule>