unpackaged/main/default/objects/Twenty_Groups__c/validationRules/ListServe_and_Group_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>ListServe_and_Group_Email</fullName>
    <active>true</active>
    <description>Requires a value in the Group EMail Address if Listserv Access = true</description>
    <errorConditionFormula>AND(Listserv_Access__c  = True,  Group_Email_Address_Members__c  = &quot;&quot;)</errorConditionFormula>
    <errorMessage>Group Email Address cannot be empty when the Listserv Access box is checked.</errorMessage>
</ValidationRule>