unpackaged/main/default/objects/Twenty_Groups__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Group_Membership_Count__c</columns>
    <columns>Current_Candidates__c</columns>
    <columns>Disconnected_Members__c</columns>
    <columns>Rejected_Candidates__c</columns>
    <columns>Franchise__c</columns>
    <columns>Group_Name__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Delete_Date__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>NCM_Support_Staff__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NCM_Proprietor__c</field>
        <operation>equals</operation>
        <value>NCM Associates</value>
    </filters>
    <label>All</label>
</ListView>