unpackaged/main/default/objects/Twenty_Groups__c/listViews/All_20_Groups.listView-meta.xml
<ListView>
    <fullName>All_20_Groups</fullName>
    <columns>NAME</columns>
    <columns>Franchise_s__c</columns>
    <columns>NCM_Proprietor__c</columns>
    <columns>Group_Type__c</columns>
    <columns>SubType__c</columns>
    <columns>SuperType__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>deleted</value>
    </filters>
    <filters>
        <field>SuperType__c</field>
        <operation>equals</operation>
        <value>Dealer 20 Groups,Industry 20 Groups,Manager 20 Groups,Manufacturers Groups</value>
    </filters>
    <label>All 20 Groups - TDR</label>
</ListView>