unpackaged/main/default/objects/Twenty_Groups__c/listViews/All_CDN_20_Groups.listView-meta.xml
<ListView>
    <fullName>All_CDN_20_Groups</fullName>
    <columns>NAME</columns>
    <columns>Franchise__c</columns>
    <columns>NCM_Proprietor__c</columns>
    <columns>Group_Type__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Start_Date__c</columns>
    <columns>SubType__c</columns>
    <columns>SuperType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>deleted</value>
    </filters>
    <filters>
        <field>SubType__c</field>
        <operation>equals</operation>
        <value>Dlr 20 - All GM - CANADA,Dlr 20 - CH Chry Dodge Jeep - CANADA,Dlr 20 - Ford Metro - CANADA,Dlr 20 - Ford Regional - CANADA,Dlr 20 - Hyundai - CANADA,Dlr 20 - Mazda - CANADA,Dlr 20 - Nissan - CANADA,Dlr 20 - Subaru - CANADA</value>
    </filters>
    <label>All CDN 20 Groups - TDR</label>
</ListView>