unpackaged/main/default/objects/Twenty_Groups__c/listViews/All_Prop_Groups.listView-meta.xml
<ListView>
    <fullName>All_Prop_Groups</fullName>
    <columns>NAME</columns>
    <columns>Franchise__c</columns>
    <columns>NCM_Proprietor__c</columns>
    <columns>Group_Type__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Start_Date__c</columns>
    <columns>SubType__c</columns>
    <columns>SuperType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>deleted</value>
    </filters>
    <filters>
        <field>SuperType__c</field>
        <operation>contains</operation>
        <value>Proprietary Groups</value>
    </filters>
    <filters>
        <field>SubType__c</field>
        <operation>notEqual</operation>
        <value>Prop - Mega</value>
    </filters>
    <label>All Prop. Groups - TDR</label>
</ListView>